--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,26 @@ name = "coral-formsets"
 version = "0.1.0"
 description = "Coral formsets"
 authors = ["Cleiton Lima <cleiton.limapin@gmail.com>"]
-license = "GNU General Public License Version 3"
+license = "GPL-3.0-only"
+readme = "README.md"
+repository = "https://github.com/coral-sistemas/coral-formsets"
+documentation = "https://github.com/coral-sistemas/coral-formsets#coral-formsets"
+keywords = ["django", "formsets", "javascript"]
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Framework :: Django :: 2.2",
+    "Framework :: Django :: 3.2",
+    "Framework :: Django :: 4.0",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: GPL License",
+    "Natural Language :: English",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+]
 packages = [
     { include = "coral_formsets", from = "src" },
 ]
